# engine3d

./: Camera.py  Clock.py  Draw.py  Environment.py  HelperFunctions.py  Matrix4x4.py  Mesh.py  Triangle.py  Vector.py  Vector4.py  Vertex.py  Window.py  __init__.py  engine.py  maths_utils.py  pyproject.toml  renderer.py  transforms.py
Tests/: main.py
src/engine3d/: __init__.py  camera.py  engine.py  primitives.py  renderer.py  transforms.py
src/engine3d.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
